<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@color/white">

    <!-- Display current date -->
    <TextView
        android:id="@+id/date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/date_text"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <!-- Display current time -->
    <TextView
        android:id="@+id/time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:text="@string/time_text"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <!-- Image to display attendance photo -->
    <ImageView
        android:id="@+id/attendance_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/attendance_photo"
        android:scaleType="centerCrop"
        android:background="@drawable/baseline_add_a_photo_24" /> <!-- Placeholder before image is loaded -->

    <!-- Button to take attendance -->
    <Button
        android:id="@+id/take_attendance_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_attendance"
        android:layout_marginTop="16dp"
        android:textSize="18sp"/>

    <!-- Button to upload image -->
    <Button
        android:id="@+id/upload_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_image"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:visibility="gone" /> <!-- Initially hidden until an image is taken -->

    <!-- Button to submit attendance -->
    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_attendance"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:enabled="false" /> <!-- Disabled initially, enabled after taking photo -->

</LinearLayout>
